[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/personagem.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/parado(13).png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/correr-2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/correr-0.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/correr-1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/parado(3).png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/parado(19).png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/parado(11).png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/parado(2).png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/parado(17).png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/parado(16).png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/parado (5).png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/parado(4).png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/parado(12).png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/parado(8).png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/parado(6).png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/parado(7).png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/parado(10).png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/parado(15).png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/parado(18).png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/parado(9).png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/parado(1).png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/parado(14).png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/correr-3.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/pular.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(6).png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(11).png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(9).png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(4).png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(2).png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(5).png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(7).png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(1).png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(8).png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(0).png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(3).png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/ataques/combo/ataque(10).png" type="Texture" id=37]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.00169, 14.0439 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 7 ) ],
"loop": true,
"name": "parado",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 24 ) ],
"loop": true,
"name": "correr",
"speed": 20.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "agachar",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "pular",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 30 ), ExtResource( 36 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": false,
"name": "ataque",
"speed": 20.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 36 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 28 ), ExtResource( 37 ), ExtResource( 27 ) ],
"loop": true,
"name": "ataque_forte",
"speed": 25.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "atacar"

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 8.58461 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 16.7448
height = 41.1511

[node name="Node2D" type="Node2D"]

[node name="personagem" type="KinematicBody2D" parent="."]
position = Vector2( 0.0205688, 1.13164 )
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem"]
position = Vector2( -5, -3.5 )
scale = Vector2( 1.9, 1.5 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="personagem"]
scale = Vector2( -1, 1 )
frames = SubResource( 2 )
animation = "ataque_forte"
frame = 2
speed_scale = 0.3

[node name="Camera2D" type="Camera2D" parent="personagem"]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="personagem"]
anims/atacar = SubResource( 3 )
anims/correr = SubResource( 4 )

[node name="atack" type="Area2D" parent="personagem"]
position = Vector2( -0.0102844, -0.56582 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem/atack"]
position = Vector2( 52, 0 )
shape = SubResource( 5 )
disabled = true

[node name="dano" type="Area2D" parent="personagem"]
position = Vector2( -0.0102844, -0.56582 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 2

[node name="colisao" type="CollisionShape2D" parent="personagem/dano"]
light_mask = 4
position = Vector2( -10.4984, 8.29043 )
shape = SubResource( 6 )
[connection signal="animation_finished" from="personagem/sprite" to="personagem" method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="personagem/atack" to="personagem" method="_on_atack_body_entered"]
[connection signal="body_entered" from="personagem/dano" to="personagem" method="_on_dano_body_entered"]
